--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -189,6 +189,9 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+        <argument
+            android:name="contra"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/cuesFragment"
