--- a/app/src/main/res/layout/fragment_breast_feeding.xml
+++ b/app/src/main/res/layout/fragment_breast_feeding.xml
@@ -28,7 +28,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="@color/colorPrimary" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/action_assess"
@@ -145,7 +145,25 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black" />
+            android:background="@color/colorPrimary" />
+
+        <LinearLayout
+            android:id="@+id/ln_contra"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="@dimen/_15dp"
+            android:background="@color/dim_red"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/app_contra"
+                android:textColor="@android:color/white" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
