--- a/app/src/main/res/layout/update_prescription.xml
+++ b/app/src/main/res/layout/update_prescription.xml
@@ -15,13 +15,13 @@
 
 
         <TextView
+            style="?attr/textAppearanceSubtitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="3dp"
             android:text="@string/enter"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             android:textStyle="bold" />
 
         <LinearLayout
