--- a/app/src/main/res/layout/side_menu.xml
+++ b/app/src/main/res/layout/side_menu.xml
@@ -332,6 +332,7 @@
             android:layout_marginTop="@dimen/_15dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:visibility="gone"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
