--- a/app/src/main/res/layout/mother_item.xml
+++ b/app/src/main/res/layout/mother_item.xml
@@ -21,13 +21,14 @@
             android:orientation="vertical"
             android:paddingRight="@dimen/_15dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="@dimen/spacing_mlarge"
                 android:layout_marginBottom="@dimen/spacing_mlarge"
-                android:textAppearance="?attr/textAppearanceBody2"
-                app:srcCompat="@drawable/mum" />
+                app:civ_border_color="@color/white"
+                app:civ_border_width="1dp"
+                android:src="@drawable/mum" />
 
             <TextView
                 android:id="@+id/tv_mum_name"
@@ -78,9 +79,9 @@
 
                     <TextView
                         android:id="@+id/app_ip_number"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         app:autoSizeTextType="uniform" />
                 </LinearLayout>
 
@@ -95,15 +96,15 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/app_delivery_method"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
                         android:id="@+id/app_delivery_method"
                         android:layout_width="match_parent"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         app:autoSizeTextType="uniform" />
                 </LinearLayout>
 
@@ -118,15 +119,15 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/app_delivery_date"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
                         android:id="@+id/app_delivery_date"
                         android:layout_width="match_parent"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         app:autoSizeTextType="uniform" />
                 </LinearLayout>
 
@@ -141,15 +142,15 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/app_mother_status"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
                         android:id="@+id/app_mother_status"
                         android:layout_width="match_parent"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         app:autoSizeTextType="uniform" />
                 </LinearLayout>
             </LinearLayout>
@@ -177,9 +178,9 @@
 
                     <TextView
                         android:id="@+id/app_parity"
-                        android:textAppearance="?attr/textAppearanceBody2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceBody2"
                         app:autoSizeTextType="uniform" />
                 </LinearLayout>
 
@@ -194,8 +195,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/app_pmctc_status"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
@@ -217,8 +218,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/menu_multiple"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
@@ -240,8 +241,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="@string/app_mum_location"
-                        android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textStyle="bold"
                         app:autoSizeTextType="uniform" />
 
                     <TextView
