--- a/app/src/main/res/layout-large/mother_item.xml
+++ b/app/src/main/res/layout-large/mother_item.xml
@@ -21,13 +21,13 @@
             android:orientation="vertical"
             android:paddingRight="@dimen/_15dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="@dimen/spacing_mlarge"
                 android:layout_marginBottom="@dimen/spacing_mlarge"
                 android:textAppearance="?attr/textAppearanceBody2"
-                app:srcCompat="@drawable/mum" />
+                android:src="@drawable/mum" />
 
             <TextView
                 android:textSize="18sp"
