--- a/app/src/main/res/layout/fragment_baby_feeds.xml
+++ b/app/src/main/res/layout/fragment_baby_feeds.xml
@@ -48,11 +48,13 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_current_prescription"
         android:textAppearance="?attr/textAppearanceSubtitle1"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -73,5 +75,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
+
+        <include
+            android:id="@+id/inc_empty"
+            layout="@layout/empty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </LinearLayout>
