--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -8,6 +8,13 @@
     android:weightSum="3"
     tools:context=".screens.dashboard.RegistrationFragment">
 
+    <include
+        android:id="@+id/breadcrumb"
+        layout="@layout/breadcrumb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_15dp" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/add_patient_container"
         android:layout_width="match_parent"
@@ -28,7 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5dp"
             android:backgroundTint="@color/dim_red"
-            android:text="@string/action_submit" />
+            android:text="@string/action_submit"
+            app:cornerRadius="@dimen/_25dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_cancel"
@@ -37,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5dp"
             android:text="@string/action_cancel"
+            app:cornerRadius="@dimen/_25dp"
             app:strokeColor="@color/dim_red" />
 
     </LinearLayout>
