--- a/app/src/main/res/layout/fragment_add_prescription.xml
+++ b/app/src/main/res/layout/fragment_add_prescription.xml
@@ -8,44 +8,50 @@
     android:weightSum="3"
     tools:context=".screens.dashboard.prescription.AddPrescriptionFragment">
 
-<!--
     <include
-        android:id="@+id/custom"
-        layout="@layout/prescription" />-->
+        android:id="@+id/breadcrumb"
+        layout="@layout/breadcrumb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_15dp" />
 
-       <androidx.fragment.app.FragmentContainerView
-           android:id="@+id/add_patient_container"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:layout_weight="2.7"
-           android:visibility="visible" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/add_patient_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2.7"
+        android:visibility="visible" />
 
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:gravity="end"
-           android:orientation="horizontal"
-           android:padding="@dimen/_15dp"
-           android:visibility="visible"
-           android:weightSum="2">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:padding="@dimen/_15dp"
+        android:visibility="visible"
+        android:weightSum="2">
 
-           <com.google.android.material.button.MaterialButton
-               android:id="@+id/btn_submit"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_margin="@dimen/_5dp"
-               android:backgroundTint="@color/dim_red"
-               android:text="@string/action_submit" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5dp"
+            android:backgroundTint="@color/dim_red"
+            android:text="@string/action_submit"
+            android:textAllCaps="false"
+            app:cornerRadius="@dimen/_25dp" />
 
-           <com.google.android.material.button.MaterialButton
-               android:id="@+id/btn_cancel"
-               style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_margin="@dimen/_5dp"
-               android:text="@string/action_cancel"
-               app:strokeColor="@color/dim_red" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_cancel"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5dp"
+            android:text="@string/action_cancel"
+            android:textAllCaps="false"
+            app:cornerRadius="@dimen/_25dp"
+            app:strokeColor="@color/dim_red" />
 
-       </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
