--- a/app/src/main/res/layout/fragment_baby_feeds.xml
+++ b/app/src/main/res/layout/fragment_baby_feeds.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginEnd="@dimen/_5dp"
+            android:textAllCaps="false"
             android:backgroundTint="@color/dim_black"
             android:text="@string/action_update_prescription"
             android:textColor="@android:color/white"
@@ -43,6 +44,7 @@
             android:layout_height="40dp"
             android:backgroundTint="@color/dim_red"
             android:text="@string/action_new_prescription"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
             app:cornerRadius="@dimen/_25sp" />
     </LinearLayout>
