--- a/app/src/main/res/layout/empty.xml
+++ b/app/src/main/res/layout/empty.xml
@@ -47,13 +47,14 @@
             <TextView
                 android:id="@+id/cp_title"
                 style="?attr/textAppearanceBody2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="15dp"
                 android:text="@string/nothing_found"
                 android:textStyle="bold"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
