--- a/app/src/main/res/layout/fragment_baby_monitoring.xml
+++ b/app/src/main/res/layout/fragment_baby_monitoring.xml
@@ -68,12 +68,13 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            style="?attr/textAppearanceSubtitle1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:padding="@dimen/padding_10"
                             android:text="@string/app_second_session"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                            android:textStyle="bold" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/action_click_tips"
@@ -83,6 +84,7 @@
                             android:backgroundTint="@color/dim_red"
                             android:gravity="end"
                             android:text="@string/action_click_tips"
+                            android:textAllCaps="false"
                             android:textColor="@android:color/white"
                             app:cornerRadius="@dimen/_25sp" />
                     </RelativeLayout>
@@ -116,7 +118,8 @@
                             android:layout_margin="@dimen/_5dp"
                             android:backgroundTint="@color/dim_red"
                             android:text="@string/action_submit"
-                            android:textColor="@android:color/white" />
+                            android:textColor="@android:color/white"
+                            app:cornerRadius="@dimen/_25dp" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/btn_cancel"
@@ -125,6 +128,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/_5dp"
                             android:text="@string/action_cancel"
+                            app:cornerRadius="@dimen/_25dp"
                             app:strokeColor="@color/dim_red" />
 
                     </LinearLayout>
