--- a/app/src/main/res/layout/statistics.xml
+++ b/app/src/main/res/layout/statistics.xml
@@ -432,7 +432,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="end"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <ImageView
