--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,5 +61,6 @@
     <dimen name="component_horizontal_margin">4dp</dimen>
     <dimen name="component_vertical_margin">4dp</dimen>
     <dimen name="icon_container_height">128dp</dimen>
+    <dimen name="_3dp">3dp</dimen>
 
 </resources>
