--- a/app/src/main/res/layout/fragment_baby_assessment.xml
+++ b/app/src/main/res/layout/fragment_baby_assessment.xml
@@ -64,6 +64,7 @@
                         android:layout_margin="@dimen/_5dp"
                         android:backgroundTint="@color/dim_red"
                         android:text="@string/action_submit"
+                        app:cornerRadius="@dimen/_25dp"
                         android:textColor="@android:color/white" />
 
                     <com.google.android.material.button.MaterialButton
@@ -73,6 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_5dp"
                         android:text="@string/action_cancel"
+                        app:cornerRadius="@dimen/_25dp"
                         app:strokeColor="@color/dim_red" />
 
                 </LinearLayout>
