--- a/app/src/main/res/layout/patient_list_view.xml
+++ b/app/src/main/res/layout/patient_list_view.xml
@@ -22,6 +22,7 @@
         android:paddingBottom="@dimen/_100dp"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/baby_list_item_view" />
 
 </RelativeLayout>
