--- a/app/src/main/res/layout/fragment_babies.xml
+++ b/app/src/main/res/layout/fragment_babies.xml
@@ -64,7 +64,8 @@
         android:id="@+id/pb_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/img_empty"
