--- a/app/src/main/res/layout/prescribe_item.xml
+++ b/app/src/main/res/layout/prescribe_item.xml
@@ -23,9 +23,8 @@
         <TextView
             android:id="@+id/app_today_total"
             android:layout_width="match_parent"
-
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceBody2" />
 
         <TextView
             android:layout_width="match_parent"
@@ -38,9 +37,9 @@
         <TextView
             android:id="@+id/app_route"
 
-            android:textAppearance="?attr/textAppearanceBody2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceBody2" />
     </LinearLayout>
 
     <LinearLayout
@@ -50,6 +49,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_frequency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_three_hourly"
@@ -59,8 +59,8 @@
         <TextView
             android:id="@+id/app_three_hourly"
             android:layout_width="match_parent"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceBody2" />
     </LinearLayout>
 
     <LinearLayout
@@ -73,14 +73,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:text="@string/app_three_hourly_break"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/app_three_hourly_break"
             android:layout_width="match_parent"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceBody2" />
     </LinearLayout>
 </LinearLayout>
