--- a/app/src/main/res/layout/update_prescription.xml
+++ b/app/src/main/res/layout/update_prescription.xml
@@ -83,6 +83,34 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tli_frequency"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:hint="@string/app_frequency"
+                app:boxStrokeColor="@color/colorPrimary"
+                app:hintTextColor="@color/colorPrimary">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/eFrequency"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:importantForAutofill="no"
+                    android:inputType="numberDecimal"
+                    android:textColorHint="#757575"
+                    android:textSize="12sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -157,14 +185,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/bf_freq"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1" />
 
             <include
                 android:id="@+id/bf_route"
@@ -207,15 +227,6 @@
                 android:layout_weight="1" />
 
             <include
-                android:id="@+id/formula_freq"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1" />
-
-            <include
                 android:id="@+id/formula_route"
                 layout="@layout/routes"
                 android:layout_width="0dp"
@@ -243,15 +254,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/formula_freq_other"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1"
-                android:visibility="invisible" />
 
             <include
                 android:id="@+id/formula_other"
@@ -293,14 +295,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/ebm_freq"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1" />
 
             <include
                 android:id="@+id/ebm_route"
@@ -341,14 +335,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/dhm_freq"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1" />
 
             <include
                 android:id="@+id/dhm_route"
@@ -387,6 +373,17 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_dhm_reason"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_15dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:visibility="gone">
+
             <include
                 android:id="@+id/dhm_reason"
                 layout="@layout/reason"
@@ -396,7 +393,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
         </LinearLayout>
-
 
         <TextView
             android:id="@+id/tv_iv_fluids"
@@ -427,14 +423,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/iv_freq"
-                layout="@layout/frequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1" />
 
             <include
                 android:id="@+id/iv_route"
@@ -483,15 +471,6 @@
                 android:layout_marginEnd="3dp"
                 android:layout_weight="1" />
 
-            <include
-                android:id="@+id/other_route"
-                layout="@layout/routes"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_weight="1"
-                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -508,9 +487,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5dp"
-                app:cornerRadius="@dimen/_25dp"
                 android:backgroundTint="@color/dim_red"
-                android:text="@string/action_submit" />
+                android:text="@string/action_submit"
+                app:cornerRadius="@dimen/_25dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_cancel"
