--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="textColor">#ECE5EC</color>
     <color name="grayColor">#D3D3D3</color>
-
+    <color name="overlay_dark_50">#80000000</color>
     <color name="light_green_50">#F1F8E9</color>
     <color name="light_green_100">#DCEDC8</color>
     <color name="light_green_200">#C5E1A5</color>
