--- a/app/src/main/res/layout/fragment_baby_monitoring.xml
+++ b/app/src/main/res/layout/fragment_baby_monitoring.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,132 +8,63 @@
     android:orientation="vertical"
     tools:context=".screens.dashboard.child.BabyMonitoringFragment">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <include
-            android:id="@+id/breadcrumb"
-            layout="@layout/breadcrumb"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_15dp" />
-
-        <include
-            android:id="@+id/inc_details"
-            layout="@layout/baby_item" />
-
-        <LinearLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            app:expandedTitleGravity="top"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <LinearLayout
-                android:id="@+id/ln_current"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/_15dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_current_prescription"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/dim_red" />
-
+                app:layout_collapseMode="parallax">
 
                 <include
-                    android:id="@+id/inc_prescribe"
-                    layout="@layout/prescribe_item" />
+                    android:id="@+id/breadcrumb"
+                    layout="@layout/breadcrumb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_15dp" />
 
+                <include
+                    android:id="@+id/inc_details"
+                    layout="@layout/baby_item" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+    </com.google.android.material.appbar.AppBarLayout>
 
-                        <TextView
-                            style="?attr/textAppearanceSubtitle1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:padding="@dimen/padding_10"
-                            android:text="@string/app_second_session"
-                            android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/action_click_tips"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_alignParentEnd="true"
-                            android:backgroundTint="@color/dim_red"
-                            android:gravity="end"
-                            android:text="@string/action_click_tips"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            app:cornerRadius="@dimen/_25sp" />
-                    </RelativeLayout>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/dim_red"
+            app:tabIndicatorHeight="3dp"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/dim_red" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/black" />
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/tab_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp" />
 
-                    <include
-                        android:id="@+id/control"
-                        layout="@layout/feeding" />
-
-                    <androidx.fragment.app.FragmentContainerView
-                        android:id="@+id/add_patient_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="500dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_15dp"
-                        android:weightSum="2">
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btn_submit"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/_5dp"
-                            android:backgroundTint="@color/dim_red"
-                            android:text="@string/action_submit"
-                            android:textColor="@android:color/white"
-                            app:cornerRadius="@dimen/_25dp" />
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btn_cancel"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/_5dp"
-                            android:text="@string/action_cancel"
-                            app:cornerRadius="@dimen/_25dp"
-                            app:strokeColor="@color/dim_red" />
-
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
